--- a/second-article/style.css
+++ b/second-article/style.css
@@ -32,10 +32,12 @@ h1{
 }
 
 .h1sub{
-	margin-top:4rem;
-	text-align: right;
-	font-size: 2.7rem;
-	line-height: 3rem;
+	
+		background-color: white;
+		font-size:20px;
+		line-height: 2rem;
+		filter:drop-shadow(7px 7px 7px rgba(3, 2, 2, 0.25));
+		
 }
 
 .h1-text{
@@ -105,11 +107,19 @@ h1{
 	transform:none;
 	font-size: 5rem;
 	margin:-3rem;
-	padding: 3rem;
+	padding: 6rem;
 	background-color: black;
 	color:antiquewhite;
 }
 
+.h1sub{
+	font-size: 32px;
+	text-align: right;
+	margin-top:-4.3rem;
+	margin-right:2rem;
+	color:antiquewhite;
+	background-color:black;
+}
 .h1-italic{
 	padding-top:2rem;
 }
